(include_subdirs unqualified)

(library
 (name sleighDef)
 (preprocess
  (pps ppx_log ppx_cwd))
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3)
 (libraries xml-light stdlibExt)
 (modules
  XmlExt
  PatternInfo
  ConstructorPtr
  ConstructState
  ParserContext
  ParserWalker
  PatternBlock
  OperandValue
  TokenField
  ContextField
  ConstantValue
  StartInstructionValue
  EndInstructionValue
  Next2InstructionValue
  PatternValue
  Bop
  Uop
  PatternExpressionF
  PatternExpression
  OperandExpression
  Scope
  SymbolTag
  UserOpSymbol
  UserOpPtr
  SubtableSymbol
  SubtablePtr
  Next2Symbol
  Next2Ptr
  StartSymbol
  StartPtr
  VarNodeSymbol
  VarNodePtr
  EpsilonSymbol
  EpsilonPtr
  PatternlessSymbol
  PatternlessPtr
  OperandSymbol
  OperandPtr
  EndSymbol
  EndPtr
  SpecificSymbol
  SpecificPtr
  VarNodeListSymbol
  VarNodeListPtr
  ValueMapSymbol
  ValueMapPtr
  NameSymbol
  NamePtr
  ContextSymbol
  ContextPtr
  PureValueSymbol
  PureValuePtr
  ValueSymbol
  ValuePtr
  FamilySymbol
  FamilyPtr
  TupleSymbol
  TuplePtr
  TripleSymbol
  TriplePtr
  Symbol
  SymbolPtr
  TypeDef
  SymbolHeader
  AddrSpace
  Spaces
  SourceFileIndexer
  SleighInit
  ConstTpl
  VarNodeTpl
  OpTpl
  HandleTpl
  ConstructTpl
  ContextOp
  ContextCommit
  ContextChange
  Constructor
  ConstructorMap
  ContextPattern
  InstructionPattern
  CombinePattern
  DisjointPattern
  DecisionNode
  SymTable
  PtrBuilder
  Sla
  SymbolPrinter))
