(library
 (name stdlibExt)
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3)
 (libraries unix)
 (modules
  Either3
  Either4
  Either5
  Either6
  Either7
  Int64Ext
  HashtblExt
  ResultExt
  IntMap
  Int64Map
  Int32Map
  StringMap
  IntSet
  Int64Set
  Int32Set
  Int64Hashtbl
  ListExt
  MutMap
  MutSet
  Notation
  Logger))
