(library
 (name stdlibExt)
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (foreign_stubs
  (language c)
  (names float32 float64 float80))
 (flags -w -20-33-3)
 (libraries unix sexplib zarith)
 (modules
  Either3
  Either4
  Either5
  Either6
  Either7
  Either8
  Array
  Bool
  Char
  Float
  Float32
  Float64
  Float80
  Int64
  Int32
  Option
  String
  Unit
  Hashtbl
  Result
  IntMap
  Int64Map
  Int32Map
  StringMap
  IntSet
  Int64Set
  Int32Set
  Int64Hashtbl
  List
  MutMap
  MutSet
  Notation
  Logger))
