(executable
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log ppx_cwd))
 (name cfa_analyzer)
 (public_name multi-step-decomp)
 (package multi-step-decomp)
 (libraries zarith unix stdlibExt ppx_log ppx_cwd basic l0 world)
 (modules cfa_analyzer))

(executable
 (flags -w -20-33-3 -g)
 (preprocess
  (pps ppx_log ppx_cwd))
 (name interpreter)
 (public_name multi-step-decomp)
 (package multi-step-decomp)
 (libraries
  zarith
  unix
  stdlibExt
  ppx_log
  ppx_cwd
  basic
  l0
  world
  l1Partial
  l1
  l2Partial
  l2
  l3
  artifact)
 (modules interpreter))

(executable
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log ppx_cwd))
 (name decompiler)
 (public_name multi-step-decomp)
 (package multi-step-decomp)
 (libraries
  zarith
  unix
  stdlibExt
  ppx_log
  ppx_cwd
  basic
  l0
  world
  l1Partial
  l1
  l2Partial
  l2
  l3
  artifact)
 (modules decompiler))

(executable
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log ppx_cwd))
 (name sim_checker)
 (public_name multi-step-decomp)
 (package multi-step-decomp)
 (libraries
  zarith
  unix
  stdlibExt
  ppx_log
  ppx_cwd
  basic
  l0
  world
  l1Partial
  l1
  l2Partial
  l2
  l3
  simulation)
 (modules sim_checker))
