(executable
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log ppx_cwd))
 (name interpreter)
 (public_name multi-step-decomp)
 (package multi-step-decomp)
 (libraries
  zarith
  unix
  stdlibExt
  ppx_log
  ppx_cwd
  common
  ILIR
  world
  FGIR_partial
  FGIR
  ASIR
  IOIR
  artifact)
 (modules interpreter))

(executable
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log ppx_cwd))
 (name debugger)
 (public_name multi-step-decomp)
 (package multi-step-decomp)
 (libraries
  zarith
  unix
  stdlibExt
  ppx_log
  ppx_cwd
  common
  ILIR
  world
  FGIR_partial
  FGIR
  ASIR
  IOIR
  artifact)
 (modules debugger))

(executable
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log ppx_cwd))
 (name decompiler)
 (public_name multi-step-decomp)
 (package multi-step-decomp)
 (libraries
  zarith
  unix
  stdlibExt
  ppx_log
  ppx_cwd
  common
  ILIR
  world
  FGIR_partial
  FGIR
  ASIR
  IOIR
  artifact)
 (modules decompiler))

(executable
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log ppx_cwd))
 (name sim_checker)
 (public_name multi-step-decomp)
 (package multi-step-decomp)
 (libraries
  zarith
  unix
  stdlibExt
  ppx_log
  ppx_cwd
  common
  ILIR
  world
  FGIR_partial
  FGIR
  ASIR
  IOIR
  artifact
  simulation)
 (modules sim_checker))
