(rule
 (with-stdout-to
  DisassemblyTest1.output
  (run
   ../../src/tool/slaparser.exe
   "55"
   "4889e5"
   "4883ec10"
   "c745fc00000000"
   "8345fc01"
   "8b45fc"
   "89c6"
   "b800000000"
   "90"
   "c9"
   "c3")))

(rule
 (alias runtest)
 (action
  (diff DisassemblyTest1.expected DisassemblyTest1.output)))

(rule
 (with-stdout-to
  DisassemblyTest2.output
  (run
   ../../src/tool/slaparser.exe
   "554889e54883ec10c745fc000000008345fc018b45fc89c6b80000000090c9c3")))

(rule
 (alias runtest)
 (action
  (diff DisassemblyTest2.expected DisassemblyTest2.output)))

(rule
 (with-stdout-to
  DisassemblyTest3.output
  (run ../../src/tool/slaparser.exe "e930000000")))

(rule
 (alias runtest)
 (action
  (diff DisassemblyTest3.expected DisassemblyTest3.output)))
