(include_subdirs unqualified)

(library
 (name ASIR)
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries ocamlgraph stdlibExt ppx_log common FGIR)
 (modules
  VarNode
  Block
  Func
  Inst
  CallTarget
  JCall
  JTailCall
  JRet
  Jmp
  Prog
  NonNumericValue
  Sem
  Init
  Interp
  IPCFG
  REA
  L1toL2))
