(include_subdirs unqualified)

(library
 (name FGIR)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries stdlibExt ppx_log common FGIR_partial)
 (modules
  Inst
  CallTarget
  JCall
  JTailCall
  JRet
  Jmp
  Block
  Func
  Prog
  Sem
  Init
  Interp
  AbsVal
  ARegFile
  AStack
  AccessD
  AbsState
  FSAbsD
  SPFA))
