(include_subdirs unqualified)

(library
 (name FGIR)
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries stdlibExt ppx_log common FGIR_partial)
 (modules
  VarNode
  Inst
  CallTarget
  JCall
  JTailCall
  JRet
  Jmp
  Block
  Func
  Prog
  Sem
  Init
  Interp
  AbsVal
  ARegFile
  AStack
  AccessD
  AbsState
  FSAbsD
  SPFA))
