(include_subdirs unqualified)

(library
 (name FGIR)
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3 -open StdlibExt -open Notation)
 (preprocess
  (pps ppx_log ppx_deriving.show ppx_sexp_conv ppx_fields_conv))
 (libraries sexplib stdlibExt common FGIR_partial)
 (modules
  VarNode
  Inst
  CallTarget
  JCall
  JTailCall
  JRet
  Jmp
  Block
  Func
  Prog
  Sem
  Init
  Interp
  AbsVal
  ARegFile
  AStack
  AccessD
  AbsState
  FSAbsD
  SPFA))
