(include_subdirs unqualified)

(library
 (name FGIR_partial)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries stdlibExt ppx_log common ILIR)
 (modules
  Inst
  CallTarget
  JCall
  JTailCall
  JRet
  Jmp
  Block
  Func
  Prog
  Sem
  Init
  Interp
  ICFG
  PDG
  AExpr
  AExprSet
  Key
  KeyPair
  KeyMap
  BoolPowerD
  NonRelStateD
  OctagonD
  VSAnalysisDomain
  VSA
  L0toL1_shallow
  Refine))
