(include_subdirs unqualified)

(library
 (name FGIR_partial)
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries stdlibExt ppx_log common ILIR)
 (modules
  VarNode
  Inst
  CallTarget
  JCall
  JTailCall
  JRet
  Jmp
  Block
  Func
  Prog
  Sem
  Init
  Interp
  ICFG
  PDG
  AExpr
  AExprSet
  Key
  KeyPair
  KeyMap
  BoolPowerD
  NonRelStateD
  OctagonD
  VSAnalysisDomain
  VSA
  L0toL1_shallow
  Refine))
