(include_subdirs unqualified)

(library
 (name ILIR)
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries stdlibExt ppx_log common basic_domain value_domain world)
 (modules Inst Prog Sem Init Interp JumpG BoundaryPointD Shallow_CFA))
