(include_subdirs unqualified)

(library
 (name IOIR)
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries ocamlgraph stdlibExt ppx_log common ASIR)
 (modules
  Block
  Func
  Inst
  CallTarget
  JCall
  JTailCall
  JRet
  Jmp
  Prog
  NonNumericValue
  Sem
  Init
  Interp
  L2toL3))
