(include_subdirs unqualified)

(library
 (name artifact)
 (flags -w -20-33-3)
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (preprocess
  (pps ppx_log ppx_sexp_conv))
 (libraries
  angstrom
  sexplib
  ppx_sexp_conv
  stdlibExt
  ppx_log
  common
  ILIR
  FGIR
  ASIR
  IOIR)
 (modules Data Dumper Loader IOIR_repl))
