(include_subdirs unqualified)

(library
 (name common)
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries ocamlgraph ctypes ctypes-foreign ppx_log stdlibExt)
 (modules
  ;; syntax-core
  Const
  Mnemonic
  RegId
  VarNode
  ;; syntax-addr
  Byte8
  Byte8Map
  ;; syntax-loc
  Loc
  LocMap
  LocSet
  LocHashtbl
  ;; syntax-inst
  Uop
  Bop
  Assignable
  ILoadStore
  IAssignment
  IUnimplemented
  IJump
  IJumpInd
  ICbranch
  ISLoadStore
  INop
  InstF
  InstFullF
  RawInst
  ;; syntax-jmp
  CallTargetF
  JIntra
  JCallF
  JRetF
  JTailCallF
  JmpFullF
  ;; syntax-block
  BlockF
  ;; syntax-func
  FuncHelperF
  ;; semantics-timestamp
  Int64TimeStamp
  UnitTimeStamp
  ;; semantics-cursor
  CursorF
  ;; semantics-event
  StopEvent
  ;; semantics-cont
  ContF
  ;; semantics-value
  Storable
  NumericValue
  NumericBop
  NumericUop
  SPVal
  ValueF
  Interop
  ;; semantics-regs
  RegIdMap
  RegIdSet
  RegFileF
  ;; semantics-mem
  MemoryBlock
  DMem
  FailableMemory
  DMemCombinedFailableMemory
  FrameF
  FuncTimestampMap
  LocalMemoryF
  MemoryF
  ;; semantics-sto
  StoreActionF
  LowStore
  HighStoreF
  ;; semantics-action
  SCallTargetF
  SCallF
  STailCallF
  SRetF
  LowActionF
  HighActionF
  ;; semantics-state
  HighStateF
  StateStoreF
  ;; analysis
  CGF
  ICFGF
  ;; etc
  PrettySpec))
