(include_subdirs unqualified)

(library
 (name common)
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log ppx_sexp_conv))
 (libraries
  sexplib
  ppx_sexp_conv
  ocamlgraph
  ctypes
  ctypes-foreign
  ppx_log
  stdlibExt)
 (modules
  ;; syntax-core
  NumericConst
  SymbolicConst
  SymbolizableConst
  ConstF
  Mnemonic
  RegId
  VarNodeF
  NumericVarNode
  SymbolicVarNode
  ;; syntax-addr
  Byte8
  Byte8Map
  ;; syntax-loc
  Loc
  LocMap
  LocSet
  LocHashtbl
  ;; syntax-inst
  Uop
  Bop
  AssignableF
  ILoadStore
  IAssignment
  IUnimplemented
  IJump
  IJumpInd
  ICbranch
  ISLoadStore
  INop
  InstF
  InstFullF
  RawInst
  ;; syntax-jmp
  CallTargetF
  JIntraF
  JCallF
  JRetF
  JTailCallF
  JmpFullF
  ;; syntax-block
  BlockF
  ;; syntax-func
  FuncHelperF
  ;; semantics-timestamp
  TimeStampF
  Int64TimeStamp
  UnitTimeStamp
  ;; semantics-cursor
  CursorF
  ;; semantics-event
  StopEvent
  ;; semantics-cont
  ContF
  ;; semantics-value
  NonNumericValueF
  Storable
  NumericValue
  NumericBop
  NumericUop
  SPVal
  ValueF
  Interop
  ;; semantics-regs
  RegIdMap
  RegIdSet
  RegFileF
  ;; semantics-mem
  MemoryBlock
  DMem
  FailableMemory
  DMemCombinedFailableMemory
  FrameF
  FuncTimestampMap
  LocalMemoryF
  GlobalMemoryF
  MemoryF
  ;; semantics-sto
  StoreActionF
  LowStore
  HighStoreF
  ;; semantics-action
  SCallTargetF
  SCallF
  STailCallF
  SRetF
  LowActionF
  HighActionF
  ;; semantics-state
  HighStateF
  StateStoreF
  ;; analysis
  CGF
  ICFGF
  ;; etc
  PrettySpec))
