(include_subdirs unqualified)

(library
 (name common)
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3 -open StdlibExt -open Notation)
 (preprocess
  (pps ppx_log ppx_deriving.show ppx_sexp_conv ppx_fields_conv))
 (libraries
  sexplib
  ppx_sexp_conv
  zarith
  ocamlgraph
  ctypes
  ctypes-foreign
  ppx_log
  stdlibExt)
 (modules
  ;; syntax-core
  NumericConst
  SymbolicConst
  SymbolizableConst
  ConstF
  Mnemonic
  RegId
  VarNodeF
  NumericVarNode
  SymbolicVarNode
  ;; syntax-addr
  Byte8
  Byte8Map
  ;; syntax-loc
  Loc
  LocMap
  LocSet
  LocHashtbl
  ;; syntax-inst
  Uop
  Bop
  AssignableF
  ILoadStore
  IAssignment
  IUnimplemented
  ISpecial
  IJump
  IJumpInd
  ICbranch
  ISLoadStore
  INop
  InstF
  InstFullF
  RawInst
  ;; syntax-jmp
  CallTargetF
  JIntraF
  JCallF
  JRetF
  JTailCallF
  JmpFullF
  ;; syntax-annot
  StackSpaceAnnot
  StackBoundaryAnnot
  SBAndIOAnnot
  InputOutputAnnot
  ReturnValueAnnot
  IORAnnot
  ;; syntax-block
  BlockF
  ;; syntax-func
  FuncF
  ;; semantics-timestamp
  TimeStampF
  Int64TimeStamp
  UnitTimeStamp
  ;; semantics-cursor
  CursorF
  ;; semantics-event
  StopEvent
  ;; semantics-cont
  ContF
  ;; semantics-value
  PointerF
  GlobalAndStackPointer
  NonNumericValueF
  Storable
  NumericValue
  UndefVal
  UndefableValue
  NumericBop
  NumericUop
  SPVal
  ValueF
  Interop
  ;; semantics-regs
  RegIdMap
  RegIdSet
  RegIdFullSet
  RegFileF
  ;; semantics-mem
  MemoryBlock
  DMem
  FailableMemory
  DMemCombinedFailableMemory
  FrameF
  FuncTimestampMap
  LocalMemoryF
  GlobalMemoryF
  MemoryF
  ;; semantics-sto
  StoreActionF
  LowStore
  HighStoreF
  ;; semantics-action
  SCallTargetF
  SCallF
  STailCallF
  SRetF
  LowActionF
  HighActionF
  ;; semantics-state
  HighStateF
  StateStoreF
  ;; analysis
  CGF
  ICFGF
  ;; etc
  PrettySpec))
