(include_subdirs unqualified)

(library
 (name common_language)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries ocamlgraph ppx_log stdlibExt basic basic_collection)
 (modules
  NumericValue
  ValueF
  Interop
  RegFileF
  NumericMemory
  DMemCombinedMemory
  FailableMemory
  DMemCombinedFailableMemory
  MemoryF
  FrameF
  ContF
  NumericBop
  NumericUop
  BlockF
  FuncHelperF
  RawInst
  InstFullF
  JmpFullF
  SPVal
  ICFG
  CG))
