(include_subdirs unqualified)

(library
 (name common_language)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries
  ocamlgraph
  ctypes
  ctypes-foreign
  ppx_log
  stdlibExt
  basic
  basic_collection)
 (modules
  NumericValue
  ValueF
  Interop
  RegFileF
  NumericMemory
  DMemCombinedMemory
  FailableMemory
  DMemCombinedFailableMemory
  MemoryF
  FrameF
  LocalMemoryF
  LowStore
  HighStoreF
  ContF
  NumericBop
  NumericUop
  BlockF
  FuncHelperF
  StateHelperF
  CallTargetF
  ILoadStore
  ISLoadStore
  IAssignment
  INop
  JIntra
  JCallF
  JRetF
  JTailCallF
  RawInst
  InstFullF
  JmpFullF
  SPVal
  ICFG
  CG))
