(include_subdirs unqualified)

(library
 (name l0)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries
  stdlibExt
  ppx_log
  basic
  basic_collection
  common_language
  basic_domain
  value_domain
  world)
 (modules
  Inst
  Prog
  Value
  RegFile
  Memory
  State
  Init
  Interp
  NonRelStateD
  OctagonD
  BoolPowerD
  AbsState
  UJumpD
  JumpD
  BoundaryPointD
  ContourD
  FSAbsD
  UJumpD_Mut
  JumpD_Mut
  BoundaryPointD_Mut
  ContourD_Mut
  FSAbsD_Mut
  CFA
  CFA_repl))
