(include_subdirs unqualified)

(library
 (name l1)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries stdlibExt ppx_log common l0 l1Partial)
 (modules
  Inst
  CallTarget
  JCall
  JTailCall
  JRet
  Jmp
  Block
  Func
  Prog
  Sem
  Init
  Interp
  AbsVal
  NonRelStateD
  AccessD
  AbsState
  FSAbsD
  SPFA))
