(include_subdirs unqualified)

(library
 (name l1Partial)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries stdlibExt ppx_log basic basic_domain l0 common_language)
 (modules
  Inst
  CallTarget
  JCall
  JTailCall
  JRet
  Jmp
  Block
  Func
  Prog
  Value
  Cont
  Cursor
  Stack
  Store
  State
  Init
  Interp
  ICFG
  PDG
  AExpr
  AExprSet
  Key
  KeyPair
  KeyMap
  BoolPowerD
  NonRelStateD
  OctagonD
  VSAnalysisDomain
  VSA
  L0toL1_shallow
  Refine))
