(include_subdirs unqualified)

(library
 (name l2)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries
  ocamlgraph
  stdlibExt
  ppx_log
  basic
  basic_domain
  common_language
  l2Partial)
 (modules
  Block
  Func
  Inst
  JCall
  JTailCall
  JRet
  Jmp
  Prog
  NonNumericValue
  Value
  RegFile
  Memory
  Frame
  LocalMemory
  Cont
  Cursor
  Stack
  Store
  State
  Init
  Interp
  IPCFG
  REA
  Refine))
