(include_subdirs unqualified)

(library
 (name l2Partial)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries stdlibExt ppx_log common l1)
 (modules
  Block
  Func
  Inst
  CallTarget
  JCall
  JTailCall
  JRet
  Jmp
  Prog
  NonNumericValue
  Sem
  Init
  Interp
  ASymb
  ARegFile
  AStack
  AbsState
  FSAbsD
  CSA
  L1toL2))
