(include_subdirs unqualified)

(library
 (name l3)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries
  ocamlgraph
  stdlibExt
  ppx_log
  basic
  basic_domain
  common_language
  l2)
 (modules
  Block
  Func
  Inst
  Jmp
  Prog
  LPVal
  PPVal
  SPVal
  NonNumericValue
  Value
  RegFile
  Memory
  Frame
  LocalMemory
  Cont
  Stack
  Store
  State
  Init
  Interp
  LVA))
