(include_subdirs unqualified)

(library
 (name l4)
 (flags -w -20-33-3)
 (preprocess
  (pps ppx_log))
 (libraries
  ocamlgraph
  stdlibExt
  ppx_log
  basic
  basic_domain
  common_language
  l3)
 (modules
  Block
  Func
  Inst
  Jmp
  Prog
  LPVal
  PPVal
  SPVal
  NonNumericValue
  Value
  RegFile
  Memory
  Frame
  LocalMemory
  Cont
  Stack
  Store
  State
  Init
  Interp))
