(rule
 (target main.output)
 (deps main.fgir_dump main.asir_dump main.ioir_dump)
 (action
  (with-stdout-to
   %{target}
   (run
    ../../../src/tool/sim_checker.exe
    -i
    main
    -project-cwd
    ../../../../../../))))

(rule
 (alias runtest)
 (deps ../all.expected main.output)
 (action
  (diff ../all.expected main.output)))
