(library
 (name basic_domain)
 (libraries common)
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (modules
  DomainSpec
  BotMapD
  TopMapD
  SetD
  FlatD
  FlatBoolD
  FlatInt64D
  Int64SetD
  RegIdSetD
  TupleD
  TripleD
  LocBotMapD
  LocSetD
  LocSetD_Mut
  LocSetOptionD
  LocSetOptionD_Mut
  RegIdTopMapD))
