(library
 (name basic_domain)
 (libraries common)
 (ocamlopt_flags -O3 -inline-max-depth=5 -inline-max-unroll=2)
 (flags -w -20-33-3 -open StdlibExt -open Notation)
 (modules
  DomainSpec
  BotMapD
  TopMapD
  SetD
  FlatD
  FlatBoolD
  FlatInt64D
  Int64SetD
  RegIdSetD
  TupleD
  TripleD
  LocBotMapD
  LocSetD
  LocSetD_Mut
  LocSetOptionD
  LocSetOptionD_Mut
  RegIdTopMapD))
